[project]
name = "rawe-ceek-thrice"
version = "0.1.0"
description = "F1 Live Timing to Philips Hue Bridge"
readme = "README.md"
requires-python = "~=3.9"
dependencies = [
    "aiohttp>=3.11.16",
    "colormath>=3.0.0",
    "dotenv>=0.9.9",
    "fastf1>=3.5.3",
    "loguru>=0.7.3",
    "pydantic>=2.11.2",
    "pydantic-extra-types>=2.10.3",
    "urllib3<2",
]

[project.scripts]
rawe-ceek = "rawe_ceek_thrice.main:main"

[tool.ruff.lint]
extend-select = ["I"]

[dependency-groups]
dev = [
    "ruff>=0.11.8",
]
tests = ["pytest>=8.3.5", "pytest-asyncio>=0.26.0", "pytest-cov>=6.1.1"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
markers = ["asyncio: mark a test as an asyncio test"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
